--- a/MC2-KisahKata/Base.lproj/Main.storyboard
+++ b/MC2-KisahKata/Base.lproj/Main.storyboard
@@ -241,7 +241,7 @@
         <!--Storytelling View Controller-->
         <scene sceneID="tju-wY-QNJ">
             <objects>
-                <viewController id="mtm-ID-3L6" customClass="StorytellingViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="testQ " id="mtm-ID-3L6" customClass="StorytellingViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BZJ-f0-jjw">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
