--- a/MC2-KisahKata/Base.lproj/Main.storyboard
+++ b/MC2-KisahKata/Base.lproj/Main.storyboard
@@ -294,6 +294,132 @@
             </objects>
             <point key="canvasLocation" x="1373.8461538461538" y="145.73459715639811"/>
         </scene>
+        <!--Intro View Controller-->
+        <scene sceneID="an9-bW-c1q">
+            <objects>
+                <viewController id="Olg-Av-rlx" customClass="IntroViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FxC-BN-fmB">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selamat Datang di KisahKata" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgl-xm-SFW">
+                                <rect key="frame" x="38" y="228.99999999999997" width="315" height="76.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Masukkan Nama Kamu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gPP-sr-IKE">
+                                <rect key="frame" x="38" y="353.66666666666669" width="184" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p2s-A8-NJD">
+                                <rect key="frame" x="38" y="391.66666666666669" width="315" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mGc-Vj-mHb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Jgl-xm-SFW" firstAttribute="leading" secondItem="mGc-Vj-mHb" secondAttribute="leading" constant="38" id="54z-KL-7Bu"/>
+                            <constraint firstItem="p2s-A8-NJD" firstAttribute="leading" secondItem="mGc-Vj-mHb" secondAttribute="leading" constant="38" id="6IL-mE-qoP"/>
+                            <constraint firstItem="p2s-A8-NJD" firstAttribute="top" secondItem="gPP-sr-IKE" secondAttribute="bottom" constant="16" id="HE5-c3-Ha1"/>
+                            <constraint firstItem="gPP-sr-IKE" firstAttribute="leading" secondItem="p2s-A8-NJD" secondAttribute="leading" id="JKb-Ez-t0u"/>
+                            <constraint firstItem="Jgl-xm-SFW" firstAttribute="top" secondItem="mGc-Vj-mHb" secondAttribute="top" constant="185" id="PK1-Ru-mbI"/>
+                            <constraint firstItem="mGc-Vj-mHb" firstAttribute="trailing" secondItem="p2s-A8-NJD" secondAttribute="trailing" constant="37" id="iCQ-2m-wcm"/>
+                            <constraint firstItem="gPP-sr-IKE" firstAttribute="top" secondItem="Jgl-xm-SFW" secondAttribute="bottom" constant="48" id="qud-qQ-JdW"/>
+                            <constraint firstItem="mGc-Vj-mHb" firstAttribute="trailing" secondItem="Jgl-xm-SFW" secondAttribute="trailing" constant="37" id="xo3-A7-FDh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LBX-Sg-YIy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1373.8461538461538" y="909.95260663507099"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="D9W-Ln-PGl">
+            <objects>
+                <viewController id="BzC-VE-2g4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oEY-Se-OMC">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UFk-1g-fNh">
+                                <rect key="frame" x="27.666666666666657" y="105" width="335.66666666666674" height="335"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="335" id="xJr-l4-6SL"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pertanyaan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jae-MK-JFs">
+                                <rect key="frame" x="60" y="480" width="270" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXD-gP-WOb">
+                                <rect key="frame" x="28" y="557" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="335" id="8jY-yg-X24"/>
+                                    <constraint firstAttribute="height" constant="38" id="HHv-Lh-Vg5"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-Bf-c7r">
+                                <rect key="frame" x="28" y="665" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="0Ad-9N-rr5"/>
+                                    <constraint firstAttribute="width" constant="335" id="iP2-ue-j3Z"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rlq-HS-bta">
+                                <rect key="frame" x="28" y="711" width="335" height="30"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbQ-mp-Ls3">
+                                <rect key="frame" x="28" y="611" width="335" height="38"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="335" id="ARm-bf-7rc"/>
+                                    <constraint firstAttribute="height" constant="38" id="iKO-3g-hsO"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="rHy-0h-a51"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rlq-HS-bta" firstAttribute="top" secondItem="uxV-Bf-c7r" secondAttribute="bottom" constant="8" symbolic="YES" id="1dz-jr-dSi"/>
+                            <constraint firstItem="MXD-gP-WOb" firstAttribute="leading" secondItem="rHy-0h-a51" secondAttribute="leading" constant="28" id="1in-Q1-2cb"/>
+                            <constraint firstItem="UFk-1g-fNh" firstAttribute="centerX" secondItem="rlq-HS-bta" secondAttribute="centerX" id="510-eM-Te4"/>
+                            <constraint firstItem="rHy-0h-a51" firstAttribute="trailing" secondItem="rlq-HS-bta" secondAttribute="trailing" constant="27" id="GaX-9G-8DG"/>
+                            <constraint firstItem="UFk-1g-fNh" firstAttribute="top" secondItem="oEY-Se-OMC" secondAttribute="top" constant="105" id="Jd1-Bi-r6C"/>
+                            <constraint firstItem="uxV-Bf-c7r" firstAttribute="leading" secondItem="lbQ-mp-Ls3" secondAttribute="leading" id="O0l-ms-bM4"/>
+                            <constraint firstItem="jae-MK-JFs" firstAttribute="leading" secondItem="rHy-0h-a51" secondAttribute="leading" constant="60" id="R27-p1-gwA"/>
+                            <constraint firstItem="uxV-Bf-c7r" firstAttribute="leading" secondItem="rlq-HS-bta" secondAttribute="leading" id="Ril-oy-Uma"/>
+                            <constraint firstItem="uxV-Bf-c7r" firstAttribute="centerX" secondItem="UFk-1g-fNh" secondAttribute="centerX" id="Zu4-Ym-H3H"/>
+                            <constraint firstItem="rHy-0h-a51" firstAttribute="trailing" secondItem="lbQ-mp-Ls3" secondAttribute="trailing" constant="27" id="bHg-Am-EaT"/>
+                            <constraint firstItem="MXD-gP-WOb" firstAttribute="top" secondItem="jae-MK-JFs" secondAttribute="bottom" constant="56" id="bNR-JE-b20"/>
+                            <constraint firstItem="uxV-Bf-c7r" firstAttribute="top" secondItem="lbQ-mp-Ls3" secondAttribute="bottom" constant="16" id="jKf-T4-Cd2"/>
+                            <constraint firstItem="rHy-0h-a51" firstAttribute="trailing" secondItem="MXD-gP-WOb" secondAttribute="trailing" constant="27" id="nFg-wZ-qP9"/>
+                            <constraint firstItem="jae-MK-JFs" firstAttribute="top" secondItem="UFk-1g-fNh" secondAttribute="bottom" constant="40" id="oPY-Gk-D6C"/>
+                            <constraint firstItem="rlq-HS-bta" firstAttribute="leading" secondItem="rHy-0h-a51" secondAttribute="leading" constant="28" id="pLO-V7-PN8"/>
+                            <constraint firstItem="UFk-1g-fNh" firstAttribute="leading" secondItem="rHy-0h-a51" secondAttribute="leading" constant="27.666666666666657" id="rR6-ik-08f"/>
+                            <constraint firstItem="rHy-0h-a51" firstAttribute="trailing" secondItem="jae-MK-JFs" secondAttribute="trailing" constant="60" id="rg8-hC-Ik2"/>
+                            <constraint firstItem="lbQ-mp-Ls3" firstAttribute="top" secondItem="MXD-gP-WOb" secondAttribute="bottom" constant="16" id="rsL-He-gyw"/>
+                            <constraint firstItem="lbQ-mp-Ls3" firstAttribute="leading" secondItem="rHy-0h-a51" secondAttribute="leading" constant="28" id="z6e-9A-dlM"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="caq-cR-Hsn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2160" y="909.95260663507099"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ButtonCerita" width="321" height="221"/>
